--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"Projet FishEye - Photography\"",
   "main": "index.js",
   "scripts": {
-    "test": "sass --watch ./sass/main.scss:./css/style.css"
+    "sass": "sass --watch ./sass/main.scss:./css/style.css"
   },
   "repository": {
     "type": "git",
